Preparacion para hacer un joined table en donante