@@ -1,24 +1,18 @@
 package ar.edu.utn.frba.dds.donatrack.donaciones.dominio.donante.documento;
 
-import ar.edu.utn.frba.dds.donatrack.donaciones.dominio.donante.TipoPersona;
-import java.util.Arrays;
 import java.util.List;
 
 public enum TipoDocumento {
-  DNI(TipoPersona.HUMANA),
-  CUIT(TipoPersona.JURIDICA), // Es posible hacer: CUIT(TipoDonante.JURIDICA, TipoDonante.HUMANA)
-  PASAPORTE(TipoPersona.HUMANA);
+  DNI,
+  CUIT,
+  PASAPORTE;
 
-  private final List<TipoPersona> tiposPermitidos;
-
-  TipoDocumento(TipoPersona... permitidos) {
-    this.tiposPermitidos = Arrays.asList(permitidos);
+  public static List<TipoDocumento> valoresPosiblesHumana() {
+    return List.of(DNI, PASAPORTE);
   }
 
-  public static List<TipoDocumento> values(TipoPersona tipoDonante) {
-    return Arrays.stream(values())
-        .filter(td -> td.tiposPermitidos.contains(tipoDonante))
-        .toList();
+  public static List<TipoDocumento> valoresPosiblesJuridica() {
+    return List.of(CUIT);
   }
 
 }
